--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -9,6 +9,10 @@
           <div class="cart-data">
             <p class="cart-font">Thank You,</p>
             <p class="cart-font1">Your Order is Confirmed</p>
+            <div class="orderId">
+              <label for="">Your Order ID:</label>
+              <p>ORDER1566220264</p>
+            </div>
           </div>
         </div>
       </div>
