--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -72,7 +72,7 @@
     padding: 10px;
     /* box-shadow: 0px 2px 5px 0px; */
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.12);
-    margin: 0 8px;
+    margin: 0 8px 9px;
 }
 
 .cement-showcase img {
@@ -80,12 +80,13 @@
     width:125px;
 }
 
-
-.cement-price {
-    // justify-content:center;
-    display: flex;
+.pull-center { 
+    text-align: center;
+    .cement-price {
+        // justify-content:center;
+        display: flex;
+    }
 }
-
 .cement-price p {
     margin:5px;
     padding:0px 15px 0px 0px;
@@ -182,10 +183,10 @@
     width:61px;
 }
 
-.bars-input-name {
-    height:32px !important;
-    width:120px !important;
-}
+// .bars-input-name {
+//     height:32px !important;
+//     width:120px !important;
+// }
 
 
 .bar-price1 .cement-input {
@@ -195,7 +196,9 @@
     background-color: #34e65d;
     color: #ffffff;
     padding: 8px 13px;
-    border-radius: 15px;
+    border-radius: 25px;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .bar-widget textarea {
