--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -24,7 +24,7 @@
   font-weight: bold;
   font-size: 16px;
   color: #fff;
-  text-shadow: 1px 1px black;
+  // text-shadow: 1px 1px black;
   &:hover {
     color: #000;
   }
