--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -51,6 +51,11 @@
 }
 .margin1 {
   margin: 35px 0px 0px 0px;
+  .cancel-btn {
+    position: absolute;
+    top: 351px;
+    left: 126px;
+  }
 }
 .address-text p {
   margin-top: 25px;
@@ -72,6 +77,7 @@
   // text-align: center;
   padding: 6px;
   border: 1px solid #e9ecef;
+  position: relative;
   .address-type {
     border: solid 1px #e6e2e2;
     border-radius: 25px;
@@ -83,10 +89,31 @@
     font-weight: 633;
   }
   .edit-buttons {
-    float: right;
+    
     button {
+      float: right;
       margin-left: 13px;
     }
+    .edit {
+      position: absolute;
+      top: -4px;
+      right: 23px;
+      i {
+        color: rgb(43, 43, 146);
+      }
+    }
+    .delete {
+      height: 25px;
+      width: 25px;
+      position: absolute;
+      top: -5px;
+      // left: -7px;
+      right: -11px;
+      i{
+        color: rgb(202, 23, 23);
+      }
+    }
+
   }
   p {
     padding: 0px;
