user-layout changes

--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -4,14 +4,14 @@
       <div class="mycontainer">
         <div class="cart-page">
           <div>
-              <img src="assets/tick.png" alt="tickMark">
-            </div>
+            <img src="assets/tick.png" alt="tickMark" />
+          </div>
           <div class="cart-data">
             <p class="cart-font">Thank You,</p>
             <p class="cart-font1">Your Order is Confirmed</p>
             <div class="orderId">
               <label for="">Your Order ID:</label>
-              <p>ORDER1566220264</p>
+              <p>{{ orderId }}</p>
             </div>
           </div>
         </div>
